--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "babel-loader": "^8.2.2",
+    "css-loader": "^5.1.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
     "web-vitals": "^0.2.4",
     "webpack-cli": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --progress",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
